리스트 변환시 중복 제거 추가